--- a/MyGauge.vbproj
+++ b/MyGauge.vbproj
@@ -86,7 +86,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OpenHardwareMonitorLib">
-      <HintPath>..\..\Windows Application\MyGauge Application\OpenHardwareMonitorLib.dll</HintPath>
+      <HintPath>.\OpenHardwareMonitorLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
