--- a/MyGauge.vbproj
+++ b/MyGauge.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B77AA5FC-680E-4640-AF55-BA852F09C157}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>MyGauge.My.MyApplication</StartupObject>
+    <StartupObject>MyGauge.DialogStartup</StartupObject>
     <RootNamespace>MyGauge</RootNamespace>
     <AssemblyName>MyGauge</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -113,6 +113,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DialogStartup.Designer.vb">
+      <DependentUpon>DialogStartup.vb</DependentUpon>
+    </Compile>
+    <Compile Include="DialogStartup.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="ErrorLogger.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
@@ -122,10 +128,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
-    <Compile Include="My Project\Application.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Application.myapp</DependentUpon>
-    </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -138,6 +140,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="DialogStartup.resx">
+      <DependentUpon>DialogStartup.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
     </EmbeddedResource>
@@ -152,7 +157,6 @@
     <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
-      <LastGenOutput>Application.Designer.vb</LastGenOutput>
     </None>
     <None Include="My Project\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
