Added updater and installer project.

--- a/MyGauge.vbproj
+++ b/MyGauge.vbproj
@@ -184,5 +184,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="MyGauge-Updater.exe" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
